# crudkit-leptos-scss

./: Cargo.toml
components/: table.scss
scss/components/: instance.scss  table.scss
scss/themes/light/: light-config.scss
src/: lib.rs
themes/: builder.scss
themes/dark/: dark-config.scss
